<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="Program16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/programTitle16"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="18sp"
            android:text="@string/p16" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/output"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="22sp"/>

        <ImageView
            android:layout_width="350dp"
            android:scaleType="fitXY"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:src="@drawable/p16" />
    </LinearLayout>
</ScrollView>
