<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Program10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programTitle10"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="18sp"
            android:text="@string/p10"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/output"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="22sp"/>

        <ImageView
            android:layout_width="@dimen/three_five_zero_dp"
            android:scaleType="fitXY"
            android:layout_height="@dimen/three_five_zero_dp"
            android:layout_margin="@dimen/five_dp"
            android:layout_gravity="center"
            android:src="@drawable/p10" />
    </LinearLayout>
</ScrollView>

